[package]
name = "testutils"
description = "Integration test utils for the jj-lib crate"
publish = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bstr = { workspace = true }
futures = { workspace = true }
gix = { workspace = true, features = [
    "status",
    "tree-editor",
    "worktree-mutation",
] }
hex = { workspace = true }
itertools = { workspace = true }
jj-lib = { workspace = true, features = ["testing"] }
pollster = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
proptest-state-machine = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }

[lints]
workspace = true
